--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
-* linguist-vendored
-*.Rmd linguist-vendored=false
+*.Rmd text
